[package]
name = "tokenplex-exchange"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "tokenplex_exchange"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = {version = "0.28.0", features = ["init-if-needed"]}
#tokenplex = { path = "/Users/dm/Documents/tokenplex/tokenplex/programs/tokenplex" }

anchor-spl = "0.28.0"
enumflags2 = "0.7.5"
switchboard-solana = "0.28.6"

[workspace]
resolver = "2"